bouton reset refresh la page et sauvegarde en liste

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <button id="capturer-btn" >CAPTURER</button>
 <button id="sauvegarder-btn">SAUVEGARDER</button>
 <button id="reset-btn">RESET</button>
-<p id="sauvegarde-el">Mes captures : </p>
+<ul id="sauvegarde-el">
+    <li>Mes captures : </li>
+</ul>
 
 <script src="script.js"></script>
 </body>
