--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <button id="capturer-btn" >CAPTURER</button>
 <button id="sauvegarder-btn">SAUVEGARDER</button>
 <button id="reset-btn">RESET</button>
-<ul id="sauvegarde-el">
-    <li>Mes captures : </li>
-</ul>
+<table id="sauvegarde-el">
+    <tr>
+        <th>Mes captures :</th>
+    </tr>
+</table>
 
 <script src="script.js"></script>
 </body>
